# robotcode-demo

./: .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  bootstrap  pyproject.toml  requirements.txt  robot.toml
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  devcontainer.old.json
features/: simple.feature  simple.feature.md
features/steps/: cucumber_eater.resource  steps_implementation.resource
lib/: TestLib.py  playground.py  vars.py
src/robotcode_demo/: dummy.resource  playground.py
tests/: __init__.robot  browser_demo.robot  first.robot  iftest.robot  lang_feature_tests.robot
tests/04_CarConfig/: 00_technical_keywords.resource  01_Simple_Browser_Tests.robot  02_CarConfig.robot  02_CarConfig_modified.robot
tests/99_Playground/: browser_demo.robot  first.robot  test.robot  test2.robot
tests/subfolder/: test_variants.robot  variant_a.resource  variant_b.resource  variants.resource
