[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotcode-demo"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [{ name = "Daniel Biehl", email = "dbiehl@live.de" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "robotframework",
  "robotframework-gherkin-parser",
  "robotframework-browser",
  "robotframework-faker",
  "robotcode[runner]",
]

[project.urls]
Documentation = "https://github.com/unknown/robotcode-demo#readme"
Issues = "https://github.com/unknown/robotcode-demo/issues"
Source = "https://github.com/unknown/robotcode-demo"

[tool.hatch.build.targets.wheel]
packages = ["src/robotcode_demo"]

[tool.hatch.version]
path = "src/robotcode_demo/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "robotframework-tidy",
  "robotframework-robocop",
  "ruff",
  "black",
  "mypy",
]
post-install-commands = ["rfbrowser init"]

[tool.hatch.envs.default.scripts]
test = "robotcode run {args}"
